--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
 asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.3.2
-deepchem==2.5.0
 Django==5.1
 idna==3.10
+Jinja2==3.1.2
 joblib==1.4.0
-numpy==1.26.4
+MarkupSafe==3.0.2
+numpy==2.1.3
 packaging==24.0
-pandas==2.2.2
 patsy==0.5.6
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
-scikit-learn==1.4.2
-scipy==1.13.0
 six==1.16.0
 sqlparse==0.5.1
-statsmodels==0.14.2
 threadpoolctl==3.5.0
 tzdata==2024.1
 urllib3==2.2.3
