--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ MarkupSafe==3.0.2
 numpy==2.1.3
 packaging==24.0
 patsy==0.5.6
+pygame==2.6.1
+PyOpenGL==3.1.7
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
